apps/ghostfolio/components/postgres/postgres-service.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "postgres"
spec:
  selector:
    app: "postgres"
  ports:
    - protocol: "TCP"
      port: 5432
      targetPort: "postgres"
  type: "ClusterIP"
