apps/ghostfolio/components/postgres/postgres-networkpolicy.yaml
---
apiVersion: "networking.k8s.io/v1"
kind: "NetworkPolicy"
metadata:
  name: "postgres"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: "postgres"
  policyTypes:
    - "Egress"
    - "Ingress"
  egress: []
  ingress:
    - ports:
        - protocol: "TCP"
          port: "postgres"
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: "ghostfolio"
